Fixing styling so it is mobile first

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -2,15 +2,14 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Output Management</title>
+        <title>Frank Delaguila</title>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
     </head>
     <body>
-        <header class="header" role="banner">
+        <!-- <header class="header" role="banner">
     
             <div id="nav" class="nav" role="navigation">
               
-              <!-- ACTUAL NAVIGATION MENU -->
               <ul class="nav__menu" id="menu" tabindex="-1" aria-label="main navigation" hidden>
                 <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
                 <li class="nav__item"><a href="#" class="nav__link">Shop</a></li>
@@ -19,7 +18,6 @@
                 <li class="nav__item"><a href="#" class="nav__link">Contact</a></li>
               </ul>
               
-              <!-- MENU TOGGLE BUTTON -->
               <a href="#nav" class="nav__toggle" role="button" aria-expanded="false" aria-controls="menu">
                 <svg class="menuicon" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 50 50">
                   <title>Toggle Menu</title>
@@ -33,12 +31,11 @@
                 </svg>
               </a>
               
-              <!-- ANIMATED BACKGROUND ELEMENT -->
               <div class="splash"></div>
               
             </div>
             
-        </header>
+        </header> -->
         <div class="main-banner">
             <nav id="desktop-menu">
                 <div class="container">
