--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,7 +1,3 @@
-@function circumference($r){
-    $pi: 3.141592653;
-    @return 2*$pi*$r;
-  }
 
 $background-color: #1a1a1d;
 $primary-color: #9c2018;
@@ -14,7 +10,7 @@ html, body {
     box-sizing: border-box;
     color: whitesmoke;
     font-size: 16px;
-    overflow: hidden;
+    //overflow: hidden;
 }
 
 a {
@@ -341,7 +337,6 @@ END MOBILE MENU ANIMATION CSS
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
-    background-attachment: fixed;
     z-index: 0;
 
     #banner-headline {
@@ -350,6 +345,10 @@ END MOBILE MENU ANIMATION CSS
         font-size: 3rem;
         color: $primary-color;
         font-weight: 900;
+    }
+
+    @media only screen and (min-width: 1024px) {
+        background-attachment: fixed;
     }
 }
 
@@ -363,30 +362,60 @@ END MOBILE MENU ANIMATION CSS
         height: 150px;
         background-image: url('../images/banner-shape.svg');
         background-repeat: no-repeat;
-        background-size: 100% 101%;
+        background-size: cover;
         background-position: center center;
+
+        @media only screen and (min-width: 1024px) {
+            background-size: contain;
+            top: -100px;
+        }
+        
+        @media only screen and (min-width: 1260px) {
+            top: -120px;
+        }
     }
 }
 
 .about-section {
     display: flex;
+    flex-direction: column;
     justify-content: center;
 
     h2 {
-        font-size: 3rem;
+        font-size: 4rem;
         color: $primary-color;
         font-weight: 900;
+
+        @media only screen and (min-width: 1024px) {
+            font-size: 3rem;
+        }
     }
 
     & > div {
-        width: 50%;
+        width: 100%;
         line-height: 30px;
-        margin-right: 4rem;
+        margin-bottom: 4rem;
+
+        @media only screen and (min-width: 1024px) {
+            width: 50%;
+            margin-right: 4rem;
+        }
     }
 
     .about-content {
         display: flex;
         align-items: center;
+
+        p {
+            font-size: 2rem;
+            line-height: 50px;
+            font-weight: 300;
+
+            @media only screen and (min-width: 1024px) {
+                font-size: initial;
+                line-height: 30px;
+            }
+        }
 
         h2 {
             align-self: flex-start;
@@ -408,6 +437,10 @@ END MOBILE MENU ANIMATION CSS
         @media only screen and (min-width: 1600px) {
             margin: 0;
         }
+    }
+
+    @media only screen and (min-width: 1024px) {
+        flex-direction: row;
     }
 }
 
@@ -646,6 +679,7 @@ END MOBILE MENU ANIMATION CSS
 
         .carousel__button--prev,
         .carousel__button--next {
+            display: none;
             position: absolute;
             top: 50%;
             width: 3rem;
@@ -657,6 +691,10 @@ END MOBILE MENU ANIMATION CSS
             background-repeat: no-repeat;
             cursor: pointer;
             z-index: 1001;
+
+            @media only screen and (min-width: 1024px) {
+                display: block;
+            }
         }
 
         .carousel__button--prev {
