Working on mobile menu, and add ./dist to .gitignore

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,7 @@
+@function circumference($r){
+    $pi: 3.141592653;
+    @return 2*$pi*$r;
+  }
 
 $background-color: #1a1a1d;
 $primary-color: #9c2018;
@@ -10,7 +14,6 @@ html, body {
     box-sizing: border-box;
     color: whitesmoke;
     font-size: 16px;
-    //overflow: hidden;
 }
 
 a {
@@ -48,7 +51,6 @@ section {
 
 .button {
     position: relative;
-  //display:block;
     outline: 0;
     overflow:hidden;
     background: none;
@@ -68,190 +70,138 @@ MOBILE MENU ANIMATION CSS
 
 ****************************/
 
+.mobile-menu__open {
+    overflow: hidden;
+
+    .mobile-nav {
+
+        &:before {
+            opacity: 0.5;
+        }
+
+        &:after {
+            transform: translateX(45%);
+        }
+    }
+}
+
 .header {
     @media only screen and (min-width: 1024px) {
         display: none;
     }
 }
 
-// .nav {
-  
-//     // Toggle Button
-//     &__toggle {
-//         display: inline-block;
-//         position: absolute;
-//         z-index: 10;
-//         padding: 0;
-//         border: 0;
-//         background: transparent;
-//         outline: 0;
-//         right: 15px;
-//         top: 15px;
-//         cursor: pointer;
-//         border-radius: 50%;
-//         transition: background-color .15s linear;
-          
-//         &:hover,
-//         &:focus {
-//             background-color:rgba(0,0,0,.5);
-//         }
-//     }
-        
-//     &__menu {
-//         display: flex;
-//         flex-direction: column;
-//         justify-content: center;
-//         height: var(--screen-height);
-//         position: relative;
-//         z-index: 5;
-//         visibility: hidden;
-//     }
-        
-//     &__item {
-//         opacity: 0;
-//         transition: all .3s cubic-bezier(0.000, 0.995, 0.990, 1.000) .3s;
-//     }
-//     @for $i from 1 through 5 {
-//         &__item:nth-child(#{$i}){
-//             transform: translateY(-40px * $i);
-//         }
-//     }
-        
-//     &__link {
-//         color:white;
-//         display: block;
-//         text-align: center;
-//         text-transform: uppercase;
-//         letter-spacing: 5px;
-//         font-size: 1.25rem;
-//         text-decoration: none;
-//         padding: 1rem;
-          
-//         &:hover,
-//         &:focus {
-//             outline: 0;
-//             background-color:rgba(0,0,0,0.2);
-//         }
-//     }
+.nav__toggle {
+    position: relative;
+    z-index: 9999;
+}
 
-//     @media only screen and (min-width: 1024px) {
-//         display: none;
-//     }
-// }
-      
-      
-// // ---------------------------
-// // SVG Menu Icon
-// // ---------------------------
-      
-// .menuicon {
-//     display: block;
-//     cursor: pointer;
-//     color: white;
-        
-//     transform: rotate(0deg);
-//     transition: .3s cubic-bezier(0.165, 0.840, 0.440, 1.000); 
-        
-//     &__bar,
-//     &__circle {
-//         fill: none;
-//         stroke: currentColor;
-//         stroke-width: 3;
-//         stroke-linecap: round;
-//     }
-//     &__bar {
-//         transform: rotate(0deg);
-//         transform-origin: 50% 50%;
-//         transition: transform .25s ease-in-out;
-//     }
-//     &__circle {
-//         transition: stroke-dashoffset .3s linear .1s;
-//         stroke-dashoffset: circumference(23); // 23 is the <circle>'s radius
-//         stroke-dasharray: circumference(23);
-//     }
-// }
-      
-      
-// // ---------------------------
-// // Circular Splash Background
-// // ---------------------------
-      
-// .splash {
-//     position: absolute;
-//     top: 40px;
-//     right: 40px;
-//     width: 1px;
-//     height: 1px;
-        
-//     &::after {
-//         content: "";
-//         display: block;
-//         position: absolute;
-//         border-radius: 50%;
-//         background-color: var(--splash-bg-color);
-          
-//         // screen diameter can be 142vmax at most,
-//         // circle needs to be twice that size to cover it
-//         width: 284vmax;
-//         height: 284vmax;
-//         top: -142vmax;
-//         left: -142vmax;
-          
-//         transform: scale(0);
-//         transform-origin: 50% 50%;
-//         transition: transform .5s cubic-bezier(0.755, 0.050, 0.855, 0.060);
-          
-//         // will-change tells the browser we plan to 
-//         // animate this property in the near future
-//         will-change: transform;
-//     }
-// }
-      
-      
-// // ---------------------------
-// // Active State
-// // ---------------------------
-      
-// .nav:target,
-// .nav--open {
-        
-//     //scale the background circle to full size
-//     > .splash::after {
-//         transform: scale(1);
-//     }
-            
-//     //animate the menu icon
-//     .menuicon {
-//         color:white;
-//         transform: rotate(180deg);
-            
-//         &__circle {
-//             stroke-dashoffset: 0;
-//         }
-//         &__bar:nth-child(1),
-//         &__bar:nth-child(4) {
-//             opacity: 0;
-//         }
-//         &__bar:nth-child(2) {
-//             transform: rotate(45deg);
-//         }
-//         &__bar:nth-child(3) {
-//             transform: rotate(-45deg);
-//         }
-//     }
-            
-//     //show the nav items
-//     .nav {
-//         &__menu {
-//             visibility: visible;
-//         }
-            
-//         &__item {
-//             opacity: 1;
-//             transform: translateY(0);
-//         }
-//     }
-// }
+.mobile-nav {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 999;
+    overflow: hidden;
+
+    &:before {
+        position: absolute;
+        opacity: 0;
+        content: '';
+        background-color: white;
+        height: 100%;
+        width: 100%;
+        transition: opacity 0.2s ease-in-out; 
+    }
+
+    &:after {
+        content: '';
+        display: block;
+        position: absolute;
+        transform:  translateX(115%) rotate( -9deg);
+        top: -50%;
+        width: 100%;
+        background-color: $background-color;
+        height: 200%;
+        transition: transform 0.2s ease-in-out;
+        will-change: transform;
+    }
+
+    .mobile-links {
+        padding: 0;
+        margin: 0;
+        position: relative;
+        opacity: 0;
+        top: 40%;
+        left: 50%;
+        z-index: 999;
+        transform: translate(-10%, -40%);
+        font-size: 4rem;
+        list-style: none;
+
+        li {
+            margin: 4rem 0 4rem 0;
+            padding: 2rem;
+            font-weight: 300;
+        }
+    }
+}
+
+.menuicon {
+    display:block;
+    cursor:pointer;
+    color: white;
+    
+    transform:rotate(0deg);
+    
+    &__bar,
+    &__circle {
+      fill:none;
+      stroke: currentColor;
+      stroke-width:3;
+      stroke-linecap:round;
+    }
+    &__bar {
+      transform: rotate(0deg);
+      transform-origin:50% 50%;
+      transition: transform .25s ease-in-out;
+    }
+    &__circle {
+      stroke-dashoffset:circumference(23); // 23 is the <circle>'s radius
+      stroke-dasharray:circumference(23);
+    }
+}
+
+// ---------------------------
+// Active State
+// ---------------------------
+
+.nav:target,
+.nav--open {
+  
+  //scale the background circle to full size
+  > .splash::after {
+    transform:scale(1);
+  }
+  
+  //animate the menu icon
+  .menuicon {
+        color:white;
+        transform:rotate(180deg);
+        &__circle {
+            stroke-dashoffset:0;
+        }
+        &__bar:nth-child(1),
+        &__bar:nth-child(4) {
+            opacity:0;
+        }
+        &__bar:nth-child(2) {
+            transform: rotate(45deg);
+        }
+        &__bar:nth-child(3) {
+            transform: rotate(-45deg);
+        }
+    }
+}
 
 /****************************
 
@@ -284,9 +234,9 @@ END MOBILE MENU ANIMATION CSS
     justify-content: space-between;
     align-items: center;
     padding: 2rem 0 2rem 0;
-    text-align: center;
 
     #nav-links {
+        text-align: center;
         display: none;
         margin: 0;
         align-items: center;
@@ -307,11 +257,6 @@ END MOBILE MENU ANIMATION CSS
             border-radius: 2rem;
             margin: 0;
             padding: .75rem 1.25rem .75rem 1.25rem;
-            transition: font-weight 0.2s ease-in-out;
-
-            &:hover {
-                font-weight: 700;
-            }
         }
 
         @media only screen and (min-width: 1024px) {
@@ -368,6 +313,7 @@ END MOBILE MENU ANIMATION CSS
         @media only screen and (min-width: 1024px) {
             background-size: contain;
             top: -100px;
+            background-size: 100% 101%;
         }
         
         @media only screen and (min-width: 1260px) {
