--- a/src/views/index.html
+++ b/src/views/index.html
@@ -42,7 +42,7 @@
             </nav>
             <div class="banner-gradient"></div>
             <div class="container">
-                <h1 id="banner-headline" class="animate__animated animate__fadeInUp">Front End Web Developer<br/>& Designer</h1>
+                <h1 id="banner-headline" class="animate__animated">Front End Web Developer<br/>& Designer</h1>
             </div>
         </div>
 
