Testing scrolling of mobile menu

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -92,7 +92,7 @@ MOBILE MENU ANIMATION CSS
 }
 
 .mobile-nav {
-    position: absolute;
+    position: fixed;
     right: 0;
     width: 0;
     height: 100%;
