--- a/src/views/index.html
+++ b/src/views/index.html
@@ -2,6 +2,15 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta property="og:title" content="Front End Web Developer & Web Designer">
+        <meta property="og:description" content="Front End Web Developer/Designer looking for work!">
+        <meta property="og:image" content="../images/main-banner.jpg">
+        <meta property="og:url" content="http://frankdelaguila-dev.surge.sh">
+
+        <meta property="twitter:title" content="Front End Web Developer & Web Designer">
+        <meta property="twitter:description" content="Front End Web Developer/Designer looking for work!">
+        <meta property="twitter:image" content="../images/main-banner.jpg">
+        <meta property="twitter:card" content="../images/main-banner.jpg">
         <title>Frank Delaguila</title>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
     </head>
