Photoshopping project images

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -591,20 +591,20 @@ END MOBILE MENU ANIMATION CSS
             }
         }
 
-        #opalescence {
-            background-image: url('../images/carousel-placeholder.jpg');
+        #portfolio {
+            background-image: url('../images/portfolio-website.jpg');
         }
 
         #ultradent {
-            background-image: url('../images/main-banner.jpg');
+            background-image: url('../images/ultradent.jpg');
         }
 
-        #whatsgoingon {
-            background-image: url('../images/skills-banner.jpg');
+        #opalescence {
+            background-image: url('../images/opalescence.jpg');
         }
 
         #cyberpunk {
-            background-image: url('../images/carousel-placeholder.jpg');
+            background-image: url('../images/main-banner.jpg');
         }
 
         .carousel__photo.initial,
