--- a/src/views/index.html
+++ b/src/views/index.html
@@ -150,13 +150,13 @@
             <section>
                 <div class="carousel-wrapper">
                     <div class="carousel">
-                        <div id="opalescence" class="carousel__photo initial">
+                        <div id="portfolio" class="carousel__photo initial">
 
                         </div>
                         <div id="ultradent" class="carousel__photo">
 
                         </div>
-                        <div id="whatsgoingon" class="carousel__photo">
+                        <div id="opalescence" class="carousel__photo">
 
                         </div>
                         <div id="cyberpunk" class="carousel__photo">
